<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FDF9FC"
    android:padding="16dp">

    <ImageView
        android:id="@+id/itemIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:contentDescription="@drawable/key_svg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/key_svg" />

    <TextView
        android:id="@+id/itemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="25dp"
        android:text="@string/nome_do_servi_o"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintStart_toEndOf="@id/itemIcon"
        app:layout_constraintTop_toTopOf="@id/itemIcon" />

    <TextView
        android:id="@+id/itemLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_do_usuario"
        app:layout_constraintEnd_toEndOf="@id/itemName"
        app:layout_constraintStart_toStartOf="@id/itemName"
        app:layout_constraintTop_toBottomOf="@id/itemName" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="39dp"
        android:layout_height="42dp"
        android:background="#FDF9FC"
        android:contentDescription="@string/seta_para_editar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit" />


</androidx.constraintlayout.widget.ConstraintLayout>